tests/ui/parser/suggest-assoc-const.stderr
error: non-item in item list
  --> $DIR/suggest-assoc-const.rs:5:5
   |
LL |     let _X: i32;
   |     ^^^
   |
help: consider using `const` instead of `let` for associated const
   |
LL -     let _X: i32;
LL +     const _X: i32;
   |

error: aborting due to 1 previous error

